[package]
authors = ["Ewan Harrow"]
description = "Exposes uk-areacode-rust lib as WASM for nodejs and browsers"
edition = "2018"
license = "ISC"
name = "uk-areacodes-wasm"
repository = "git+https://github.com/eharrow/uk-areacodes-wasm.git"
version = "0.1.4"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
uk-areacodes = {git = "https://github.com/eharrow/uk-areacodes-rust"}
wasm-bindgen = "0.2.87"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.7", optional = true}

[dependencies.web-sys]
features = ["console"]
version = "0.3.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
